feat: setup client methods
